[gd_scene load_steps=4 format=3 uid="uid://dn8an7wovqune"]

[ext_resource type="Texture2D" uid="uid://cc07w8huw5cha" path="res://Sprites/Candado.png" id="1_4pa4l"]
[ext_resource type="Script" path="res://Scripts/candado.gd" id="1_bh11l"]

[sub_resource type="LabelSettings" id="LabelSettings_0l6qa"]
font_size = 38
font_color = Color(0, 0, 0, 1)

[node name="Candado" type="Node2D"]
script = ExtResource("1_bh11l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CandadoSprite" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1004, 484)
scale = Vector2(1.67623, 1.52469)
texture = ExtResource("1_4pa4l")

[node name="NumeroAntorchas" type="Label" parent="CanvasLayer"]
z_index = 6
offset_left = 928.0
offset_top = 537.0
offset_right = 968.0
offset_bottom = 590.0
text = "1"
label_settings = SubResource("LabelSettings_0l6qa")

[node name="NumeroArboles" type="Label" parent="CanvasLayer"]
z_index = 6
offset_left = 996.0
offset_top = 537.0
offset_right = 1036.0
offset_bottom = 590.0
text = "1"
label_settings = SubResource("LabelSettings_0l6qa")

[node name="NumeroBolas" type="Label" parent="CanvasLayer"]
z_index = 6
offset_left = 1071.0
offset_top = 537.0
offset_right = 1111.0
offset_bottom = 590.0
text = "1"
label_settings = SubResource("LabelSettings_0l6qa")
